Define estilos de CSS a carrito y lo mueve a la derecha

--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,32 @@ h6{
     font-weight: normal;
     text-decoration: underline;
 }
+
+nav {
+
+}
+
+nav .nav-list{
+    background-color: #d5e0db;
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    justify-content: center;
+}
+
+nav .nav__list-item {
+    margin: 20px;
+}
+
+nav .nav-list a {
+    text-decoration: none;
+}
+
+.cart {
+    border: 2px solid #444;
+    width: 300px;
+    margin-left: auto;
+}
+.cart ul {
+    list-style-type: none;
+}
