--- a/css/style.css
+++ b/css/style.css
@@ -33,9 +33,11 @@ nav .nav-list a {
 }
 
 .cart {
-    border: 2px solid #444;
+    /*border: 2px solid #444;*/
+    border-color: #f2f2f2;
     width: 300px;
     margin-left: auto;
+    padding: 1em;
 }
 .cart ul {
     list-style-type: none;
