--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,7 @@ nav .nav-list a {
 }
 
 .cart {
-    /*border: 2px solid #444;*/
-    border-color: #f2f2f2;
+    background-color: #f2f2f2;
     width: 300px;
     margin-left: auto;
     padding: 1em;
