Quita subrayado de h2 a carrito

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,10 @@ nav .nav-list a {
     margin-left: auto;
     padding: 1em;
 }
+
+.cart h2 {
+    text-decoration: none;
+}
 .cart ul {
     list-style-type: none;
 }
